<resources>
    <string name="app_name">Dish Application</string>
    <string name="title_all_dishes">All Dishes</string>
    <string name="title_favourite_dish">Favourite</string>
    <string name="title_random_dish">Random Dish</string>
    <string name="add">Add</string>
    <string name="ingredients">Ingredients</string>
    <string name="cooking_time">Cooking Time</string>
    <string name="category">Category</string>
    <string name="type">Type</string>
    <string name="title">Title</string>
    <string name="add_image">add image</string>
    <string name="dish_image">dish image</string>
    <string name="fav_dish">Fav Dish</string>
    <string name="select_image_action">Select Image Action</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="no_items_to_display">No Items To Display!</string>
    <string name="item_title">item title</string>
    <string name="item_name">Item Name</string>
    <string name="item">Item</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>
    <string name="favourite_button">favourite button</string>
    <string name="dish_title">Dish Title</string>
    <string name="ingredients_list">Ingredients list</string>
    <string name="direction_to_cook">Direction To Cook</string>
    <string name="directions_list">Directions list</string>
    <string name="no_favourite_dishes">No Favourite Dishes</string>
    <string name="title_edit_dish">Edit Dish</string>
    <string name="title_add_dish">Add Dish</string>
    <string name="update_dish">Update</string>
    <string name="filter">Filter</string>
    <string name="share_dish">share dish</string>
</resources>