<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.DishDetailFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/flDishDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                tools:src="@tools:sample/avatars"
                android:scaleType="fitXY"
                android:contentDescription="@string/image" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_heart"
                android:layout_gravity="end|top"
                android:background="@drawable/favorite_button_background"
                android:contentDescription="@string/favourite_button" />
        </FrameLayout>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/flDishDetails"
            android:text="@string/dish_title"
            android:textColor="@color/black"
            android:textSize="@dimen/_22sdp"
            android:textStyle="bold"
            android:layout_margin="@dimen/_10sdp"/>

        <TextView
            android:id="@+id/tvType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle"
            android:text="@string/type"
            android:textSize="@dimen/_18sdp"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"/>

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvType"
            android:text="@string/category"
            android:textSize="@dimen/_18sdp"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            />

        <TextView
            android:id="@+id/tvIngredientsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCategory"
            android:text="@string/ingredients"
            android:textSize="@dimen/_18sdp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            />

        <TextView
            android:id="@+id/tvIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvIngredientsTitle"
            android:text="@string/ingredients_list"
            android:textSize="@dimen/_18sdp"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            />

        <TextView
            android:id="@+id/tvDirectionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvIngredients"
            android:text="@string/direction_to_cook"
            android:textSize="@dimen/_18sdp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            />

        <TextView
            android:id="@+id/tvDirection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDirectionTitle"
            android:text="@string/directions_list"
            android:textSize="@dimen/_18sdp"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            />
        <TextView
            android:id="@+id/tvCookingTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDirection"
            android:text="@string/cooking_time"
            android:textSize="@dimen/_18sdp"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            />

    </RelativeLayout>

</ScrollView>